--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,6 @@ jobs:
     - name: Simulate build
       run: |
         echo "This build process for application B"
-        sleep 5
+        echo "This is DPTA-1234"
+        sleep 30
+        echo "Finished build process"
