--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
       uses: actions/checkout@v4
     - name: Simulate build
       run: |
+        ls -l
+        cat repoB.txt || true
         echo "This build process for application B"
         echo "This is DPTA-1234"
         sleep 30
