Test change for invalidation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+# Test change for invalidation
 name: Build
 run-name: ${{ inputs.orchestrator_runid && format('BuildingApp-Orch-{0}', inputs.orchestrator_runid) || 'Build' }}
 
