--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,4 @@
+# Test change for invalidation
 name: Build
 run-name: ${{ inputs.orchestrator_runid && format('BuildingApp-Orch-{0}', inputs.orchestrator_runid) || 'Build' }}
 
@@ -10,14 +11,38 @@ on:
         type: string
   push:
     branches: [ main ]
+  pull_request:
+    types: [opened, synchronize]
+    branches: [ main ]
 
 jobs:
+  invalidate-prs:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Invalidate all PRs
+      run: |
+        gh api /repos/amisovic/orchestrator/dispatches -f event_type=invalidate -f client_payload[action]=invalidate -f client_payload[branch]=${{ github.head_ref }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_WORKFLOWS }}
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Test echo
+      run: echo "test"
     - name: Simulate build
       run: |
+        ls -l
+        cat repoB.txt || true
         echo "This build process for application B"
-        sleep 5
+        echo "This is DPTA-1234"
+        sleep 6
+        echo "Finished build process"
+    - name: Dispatch build event
+      if: github.event_name == 'pull_request'
+      run: |
+        gh api /repos/amisovic/orchestrator/dispatches -f event_type=build -f client_payload[action]=build -f client_payload[branch]=${{ github.head_ref }} -f client_payload[sha]=${{ github.event.pull_request.head.sha }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT_WORKFLOWS }}
