--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,8 @@ on:
   pull_request:
     types: [opened, synchronize]
     branches: [ main ]
+  repository_dispatch:
+    types: [orchestrate-success]
 
 jobs:
   invalidate-prs:
@@ -38,3 +40,13 @@ jobs:
         echo "This is DPTA-1234"
         sleep 6
         echo "Finished build process"
+  post-orchestrator-status:
+    if: github.event_name == 'repository_dispatch' && github.event.action == 'orchestrate-success'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Post orchestrator-build check run
+      run: |
+        head_sha="${{ github.event.client_payload.head_sha }}"
+        gh api -X POST /repos/${{ github.repository }}/check-runs -f name=orchestrator-build -f head_sha=$head_sha -f status=completed -f conclusion=success -f output[title]="All builds passed" -f output[summary]="Orchestration completed successfully"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
